# eclipse-desktop-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.engram/: config.json
.github/workflows/: ci.yml
config/: agent-browser-policy.json
docs/: AGENT_BROWSER_EVALUATION.md  ALWAYS_ON_RUNTIME.md  ARCHITECTURE.md  BROWSER_AUTOMATION_ADAPTER.md  CAPABILITY_ROADMAP.md  CODING_AGENT_BRIDGE.md  DEVELOPMENT_PLAN.md  MODEL_AND_VOICE_STRATEGY.md  MULTI_ACTION_ORCHESTRATION.md  NOTIFICATIONS_AND_DESKTOP_CONTROL.md  OPENCLAW_STRATEGY.md  SECURITY.md  TOOL_ROUTER_AND_DESKTOP_LAUNCHER.md  VOICE_AND_NATIVE_CONTROL.md
docs/adr/: 0001-product-and-architecture.md  0002-free-first-agent-browser.md  0003-notification-storage-sqlite.md
openspec/changes/archive/2026-07-02-eclipse-chrome-devtools-browser-control/: archive-report.md  design.md  proposal.md
openspec/changes/eclipse-chrome-devtools-browser-control/: apply-progress.md  tasks.md  verify-report.md
openspec/changes/eclipse-chrome-devtools-browser-control/specs/browser-control/: spec.md
packaging/: README.md  eclipse-agent.spec  eclipse-setup.iss  eclipse_entry.py
scripts/: build_exe.bat  debug_wakeword_scores.py  generate_wakeword.py  setup.bat  setup_local_llm.sh  setup_wayland_audio.sh  start_eclipse.bat  start_eclipse.sh
src/eclipse_agent/: __init__.py  __main__.py  activation.py  agent_smoke.py  answer.py  audit.py  browser_automation.py  browser_control.py  browser_ref_selector.py  calendar_agenda.py  chrome_devtools_mcp.py  clipboard.py  coding_agents.py  config.py  desktop_apps.py  desktop_control.py  documents.py  email_inbox.py  email_sender.py  fedora_control.py  killswitch.py  main.py  media_playback.py  memory.py  morning_briefing.py  notification_daemon.py  notification_intents.py  notification_replies.py  notification_service.py  notifications.py  planner.py  push_to_talk.py  reminders.py  resources.py  response_formatter.py  routines.py  runtime_diagnostics.py  safety.py  screen_ask.py  settings.py  (+9 more)
src/eclipse_agent/gui/: __init__.py  settings.html
src/eclipse_agent/pal/: __init__.py  base.py  factory.py
src/eclipse_agent/pal/windows/: __init__.py  capture.py  daemon.py  input.py  launcher.py  notifications.py  system_control.py  voice.py  window_manager.py
src/eclipse_agent/safety/: __init__.py  redactor.py
tests/: conftest.py  test_activation.py  test_agent_smoke.py  test_answer.py  test_audit.py  test_browser_automation.py  test_browser_control.py  test_browser_ref_selector.py  test_calendar_agenda.py  test_chrome_devtools_mcp.py  test_clipboard.py  test_coding_agents.py  test_desktop_apps.py  test_documents.py  test_email_inbox.py  test_email_sender.py  test_fedora_control.py  test_media_playback.py  test_memory.py  test_morning_briefing.py  test_notification_daemon.py  test_notification_intents.py  test_notification_replies.py  test_notification_service.py  test_notifications.py  test_pal_base.py  test_pal_factory.py  test_pal_windows.py  test_planner.py  test_planner_new_rules.py  test_push_to_talk.py  test_redactor.py  test_reminders.py  test_response_formatter.py  test_routines.py  test_runtime_diagnostics.py  test_safety.py  test_screen_ask.py  test_settings.py  test_settings_gui.py  (+11 more)
