[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eclipse-desktop-agent"
version = "0.1.0"
description = "Eclipse: local-first voice desktop agent with safe computer automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Patricio" }]
dependencies = [
  "lancedb>=0.22",
  "mcp>=1.9",
  "openai>=1.55",
  "openwakeword>=0.6",
  "pydantic>=2.8",
  "sounddevice>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
voice = [
  "faster-whisper>=1.2",
  "sounddevice>=0.4",
]

[project.scripts]
eclipse-agent = "eclipse_agent.main:main"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
