[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eclipse-desktop-agent"
version = "0.1.0"
description = "Eclipse: local-first voice desktop agent with safe computer automation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Patricio" }]
classifiers = [
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "mcp>=1.9",
  "openai>=1.55",
  "openwakeword>=0.6",
  "pydantic>=2.8",
  "sounddevice>=0.4",
  "soundfile>=0.13",
  "numpy>=1.26",
  "Pillow>=10.0",
  "pywin32>=306",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
voice = [
  "faster-whisper>=1.2",
]
notifications = [
  "winrt-Windows.UI.Notifications.Management>=2.0",
]
wakeword-training = [
  "acoustics>=0.2.6",
  "audiomentations>=0.33,<0.44",
  "mutagen>=1.47",
  "onnx>=1.15",
  "onnxscript>=0.7",
  "piper-sample-generator>=3.2",
  "pronouncing>=0.3",
  "PyYAML>=6.0",
  "scipy>=1.11,<1.16",
  "soundfile>=0.13",
  "speechbrain>=1.1",
  "torch>=2.2",
  "torchaudio>=2.2",
  "torch-audiomentations>=0.12",
  "torchcodec>=0.13",
  "torchinfo>=1.8",
  "torchmetrics>=1.3",
  "tqdm>=4.66",
]

[project.scripts]
eclipse-agent = "eclipse_agent.main:main"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
